# TetraEngine

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeListsAAA.txt  README.md  SceneECS.drawio  TetraEngine.sln  imgui.ini  premake5.lua
assets/meshes/: star.mtl
assets/textures/tileFloor/PavingStones146_1K-PNG/: PavingStones146_1K-PNG.blend  PavingStones146_1K-PNG.mtlx  PavingStones146_1K-PNG.tres  PavingStones146_1K-PNG.usdc
core/: Application.cpp  Application.h  Behaviour.cpp  Behaviour.h  ConsoleManager.cpp  ConsoleManager.h  Core.cpp  Core.h  DestroyManager.cpp  DestroyManager.h  Editor.cpp  Editor.h  FreeType.cpp  FreeType.h  GLFWManager.cpp  GLFWManager.h  GameObject.cpp  GameObject.h  GameObject_old.cpp  GameObject_old.h  ImGuiManager.cpp  ImGuiManager.h  InputManager.cpp  InputManager.h  MyApplication.cpp  MyApplication.h  Test.h  TetraEngine.cpp  TetraEngine.vcxproj  TetraEngine.vcxproj.filters  Transform.cpp  Transform.h  config.h  imgui.ini  imgui_log.txt  premake5.lua  test.cpp  tetrapc.h
core/UI/: ComponentDisplay.cpp  ComponentDisplay.h  GameObjectInfoComponentDisplay.cpp  GameObjectInfoComponentDisplay.h  Hierarchy.cpp  Hierarchy.h  ImGuiManager.cpp  ImGuiManager.h  Inspector.cpp  Inspector.h  MeshRendererComponentDisplay.cpp  MeshRendererComponentDisplay.h  PointLightComponentDisplay.cpp  PointLightComponentDisplay.h  RigidBodyComponentDisplay.cpp  RigidBodyComponentDisplay.h  TransformComponentDisplay.cpp  TransformComponentDisplay.h
core/applications/: ApplicationConfig.h  Demo2.cpp  Demo2.h  GameDemoApp.cpp  GameDemoApp.h  MyApplication.cpp  MyApplication.h  PhysicsDemo2.cpp  PhysicsDemo2.h  PhysicsTest.cpp  PhysicsTest.h
core/applications/GameDemoApp/: Ball.cpp  Ball.h  CameraConstraint.cpp  CameraConstraint.h  CollectManager.cpp  CollectManager.h  Ground.cpp  Ground.h  Level.cpp  Level.h  PlayerController.cpp  PlayerController.h  Star.cpp  Star.h
core/applications/PhysicsDemo2/: Ball.cpp  Ball.h  PlayerControls.h
core/applications/demo2/: PlayerControls.cpp  PlayerControls.h
core/applications/gameDemo/: Ball.cpp  Ball.h  CameraConstraint.cpp  CameraConstraint.h  Ground.cpp  Ground.h  PlayerController.cpp  PlayerController.h
core/behaviours/: Bullet.cpp  Bullet.h  Enemy.cpp  Enemy.h  TestBehaviour.h  UpdateManager.cpp  UpdateManager.h
core/ecs/: Component.cpp  Component.h  ComponentHandle.h  ComponentHandle.inl  ComponentManager.cpp  ComponentManager.h  ECS.cpp  ECS.h  Entity.cpp  Entity.h  Handle.cpp  Handle.h  Storage.cpp  Storage.h
core/pch/: tetrapc.h
core/physics/: BoxCollider.cpp  BoxCollider.h  Collider.cpp  Collider.h  MeshCollider.cpp  MeshCollider.h  PhysX.cpp  PhysX.h  PhysXErrorCallback.cpp  PhysXErrorCallback.h  PhysXUtils.cpp  PhysXUtils.h  PhysicsCallback.cpp  PhysicsCallback.h  PhysicsScene.cpp  PhysicsScene.h  PlaneCollider.cpp  PlaneCollider.h  RigidBody.cpp  RigidBody.h
core/registry/: SharedContentRegistry.cpp  SharedContentRegistry.h
core/rendering/: Camera.cpp  Camera.h  Cubemap.cpp  Cubemap.h  Framebuffer.cpp  Framebuffer.h  Light.cpp  Light.h  LightManager.cpp  LightManager.h  LightRenderer.cpp  LightRenderer.h  Material.cpp  Material.h  MeshRenderer.cpp  MeshRenderer.h  PointLight.cpp  PointLight.h  Renderbuffer.cpp  Renderbuffer.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  Skybox.cpp  Skybox.h  Texture2D.cpp  Texture2D.h  Texture360.cpp  Texture360.h  VertexData.cpp  VertexData.h  ViewProvider.cpp  ViewProvider.h  Viewport.cpp  Viewport.h  ViewportCamera.cpp  ViewportCamera.h
core/tests/: ECSTest.h  HelloWorld.cpp  LibConfigTest.h  Test.cpp
core/utils/: Action.h  Brush.h  Event.h  OBJParser.cpp  OBJParser.h  Time.cpp  Time.h  Types.h  Utils.h
shaders/: lit.glfs
